<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoundProcess.Fragment_c_TypeAndSex">

    <TextView
        android:id="@+id/pet_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pet type: "
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="20dp"
        android:textColor="#252525"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mandatory_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="* This is a mandatory field"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red_alert"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/dog"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/type_dog"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_type_text" />

    <Button
        android:id="@+id/cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/type_cat"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/female"
        app:layout_constraintTop_toBottomOf="@+id/pet_type_text"/>


    <TextView
        android:id="@+id/pet_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pet sex: "
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#252525"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mandatory_comment"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sex_female"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_gender_text" />

    <Button
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sex_male"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/female"
        app:layout_constraintTop_toBottomOf="@+id/pet_gender_text"/>


    <!--        Todo - add photos of male and female signs -->


    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/next_prev_color"
        android:text="@string/save_and_continue"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/previous"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/next_prev_color"
        android:text="Back"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>